mule-management-console/v/3.3/user-groups.adoc
= 用户组

== 关于本文档

本文档以及组成 link:/mule-management-console/v/3.4/rest-api-reference[Mule管理控制台REST API参考指南“]的其他文档仅为技术参考。本文档不提供诸如说明，用例或方案的上下文信息。要理解本文档，您应该熟悉Mule运行时，用户组和 link:/mule-management-console/v/3.4/using-the-management-console-api[REST API]。


[%autowidth.spread]
|===
| *Assumptions*： | *Host*  |本地主机 |  | *Port*  | 8080 {{ 11}} | *Deployed app*  | mmc.war  |  | *User/Password*  |管理/管理
|===

有关本文档中使用的格式的详细说明，请参阅 link:/mule-management-console/v/3.4/rest-api-reference[内容组织和公约]

[source, code, linenums]
----
/api/usergroups
----

[%autowidth.spread]
|===
| *POST*  |  | *CREATE*
|  |  |
|===

创建一个新的UserGroup。

[tabs]
------
[tab,title="-> Request"]
....
*JSON*

[source, code, linenums]
----
{
  "name" : "NewUserGroupName",
  "description" : "Ability to view activity and delete events",
  "permissions" : ["VIEW_ACTIVITY", "TRACKING_DELETE"]
}
----

[%header%autowidth.spread]
|===
|Key |Type |Summary |Child of
|name |String |Name of the User Group to be created |--
|description |String |Description of the purpose of the Server Group to be created |--
|permissions |String |Permissions assigned to the User Group. A user that belongs to this User Group will have the same permissions. |--
|===

*Using CURL on Windows*

[source, code, linenums]
----
l --basic -u admin:admin -d "{ \"name\" : \"TestUserGroup\", \"description\": \"This is a test\", \"permissions\": [\"VIEW_ACTIVITY\",\"TRACKING_DELETE\"] }" --header "Content-Type: application/json" http://localhost:8080/mmc/api/usergroups
----

*Using CURL on Linux*

[source, code, linenums]
----
curl --basic -u admin:admin -d '{ "name" : "TestUserGroup", "description": "This is a test", "permissions": ["VIEW_ACTIVITY","TRACKING_DELETE"] }' --header 'Content-Type: application/json' http://localhost:8080/mmc/api/usergroups
----
....
[tab,title="<- Response"]
....
*JSON*

[source, code, linenums]
----
{
  "name":"NewUserGroupName",
  "permissions":["VIEW_ACTIVITY","TRACKING_DELETE"],
  "description":"Ability to view activity and delete events",
  "href":"http://localhost:8080/mmc/api/groups/NewUserGroupName"
}
----

[%header%autowidth.spread]
|===
|Key |Type |Summary |Child of
|name |String |Name of the User Group to be created |--
|description |String |Description of the purpose of the Server Group to be created |--
|permissions |String |Permissions assigned to the User Group. A user that belongs to this User Group will have the same permissions. |--
|href |String |Full link to the resource |--
|===
....
[tab,title="⬇️ Common Return codes"]
....
[%autowidth.spread]
|===
|*200* |The operation was successful
|*401* |Unauthorized user
|===
....
[tab,title="MMC Version"]
....
[%autowidth.spread]
|===
|*From* |3.3.0
|===
....
------

[%autowidth.spread]
|===
| *GET*  |  | *LIST ALL*
|  |  |
|===

列出特定用户组的详细信息。

[tabs]
------
[tab,title="-> Request"]
....
*SYNTAX*

[source, code, linenums]
----
GET http://localhost:8080/mmc/api/usergroups/{userGroupName}
----

[%header%autowidth.spread]
|===
|Key |Type |Summary |Child of
|userGroupName |String |Name of the server group to be listed. Invoke link:/mule-management-console/v/3.4/user-groups[LIST ALL] to obtain it. |--
|===

*Using CURL*

[source, code, linenums]
----
curl --basic -u admin:admin http://localhost:8080/mmc/api/usergroups/Administrators
----
....
[tab,title="<- Response"]
....
*JSON*

[source, code, linenums]
----
{
  "name":"Administrators",
  "permissions":["VIEW_ACTIVITY","DELETE_ITEM","MANAGE_INDEXES","POOL_MODIFY","EXECUTE_ADMIN_SCRIPTS","SERVER_MODIFY",
    "MANAGE_ALERT_NOTIFICATIONS","MANAGE_ALERT_DEFINITIONS","READ_ITEM","MANAGE_POLICIES","DEPLOYMENT_MODIFY",
    "MANAGE_LIFECYCLES","SERVER_DISBAND_CLUSTER","DEPLOYMENT_DEPLOY","SERVER_THREADS_KILL","SERVER_RESTART",
    "SERVER_FILES_VIEW","DEPLOYMENT_READ","ENDPOINT_CONTROL","MANAGE_SERVER_GROUPS","VIEW_ALERTS",
    "SERVER_CREATE_CLUSTER","MANAGE_USERS","SERVER_UNREGISTER","SERVER_FILES_MODIFY","MANAGE_FLOW_AUDIT",
    "TRACKING_VIEW","SERVER_FILES_DELETE","MANAGE_GROUPS","MANAGE_ALERT_DESTINATIONS","DEPLOYMENT_DELETE",
    "FLOW_CONTROL","FLOW_LIST","MODIFY_ITEM","APPLICATION_VIEW","SERVER_THREADS_VIEW","MANAGE_PROPERTIES",
    "SERVER_REGISTER","TRACKING_DELETE","DEPLOYMENT_CREATE","SERVER_VIEW","TRACKING_MODIFY","APPLICATION_MANAGE"],
  "href":"http://localhost:8080/mmc/api/grops/Administrators"
}
----

[%header%autowidth.spread]
|===
|Key |Type |Summary |Child of
|name |String |The identifying name of the User Group |--
|permissions |String |Permissions assigned to the User Group |--
|href |String |Full link to the User Group resource to which you can perform an operation |--
|===
....
[tab,title="⬇️ Common Return codes"]
....
[%autowidth.spread]
|===
|*200* |The operation was successful
|*401* |User has no permission to access the group
|*404* |Provided User Group name does not exist
|*500* |Error while attempting to list User Group details
|===
....
[tab,title="MMC Version"]
....
[%autowidth.spread]
|===
|*From* |3.3.0
|===
....
------

[%autowidth.spread]
|===
| *PUT*  |  | *UPDATE*
3 + |
|===

更新特定的用户组。

[tabs]
------
[tab,title="-> Request"]
....
*SYNTAX*

[source, code, linenums]
----
{
  "name" : "NewUserGroupName",
  "description" : "Ability to view activity and delete events",
  "permissions" : ["VIEW_ACTIVITY", "TRACKING_DELETE"]
}
----

[%header%autowidth.spread]
|===
|Key |Type |Summary |Child of
|name |String |Name of the User Group to be created |--
|description |String |Description of purpose of the Server Group to be created
|permissions |String |Permissions assigned to the User Group. A user that belongs to this User Group will have the same permissions |--
|===

*Using CURL on Windows*

[source, code, linenums]
----
curl --basic -u admin:admin -X PUT -d "{ \"name\" : \"NewUserGroupName\", \"description\": \"Ability to view activity and delete events\", \"permissions\": [\"VIEW_ACTIVITY\",\"TRACKING_DELETE\"] }" --header "Content-Type: application/json" http://localhost:8080/mmc/api/usergroups/Deployers
----

*Using CURL on Linux*

[source, code, linenums]
----
curl --basic -u admin:admin -X PUT -d { "name" : "NewUserGroupName", "description": "Ability to view activity and delete events", "permissions": ["VIEW_ACTIVITY","TRACKING_DELETE"] }" --header 'Content-Type: application/json' http://localhost:8080/mmc/api/usergroups/Deployers
----
....
[tab,title="<- Response"]
....
*JSON*

[source, code, linenums]
----
{
  "name" : "NewUserGroupName",
  "description" : "Ability to view activity and delete events",
  "permissions" : ["VIEW_ACTIVITY", "TRACKING_DELETE"]
  "href" : "http://localhost:8080/mmc/api/usergroups/NewUserGroupName"
}
----

[%header%autowidth.spread]
|===
|Key |Type |Summary |Child of
|name |String |Name of the User Group to be created |--
|description |String |Description of the purpose of the Server Group to be created |--
|permissions |String |Permissions assigned to the User Group. A user that belongs to this User Group will have the same permissions |--
|href |String |Full link to the User Group resource to which you can perform an operation |--
|===
....
[tab,title="⬇️ Common Return codes"]
....
[%autowidth.spread]
|===
|*200* |The operation was successful
|*401* |Unauthorized user
|*500* |Error while updating User Group
|===
....
[tab,title="MMC Version"]
....
[%autowidth.spread]
|===
|*From* |3.3.0
|===
....
------

[%autowidth.spread]
|===
| *DELETE*  |  | *REMOVE*
3 + |
|===

删除特定的用户组。

[tabs]
------
[tab,title="-> Request"]
....
*SYNTAX*

[source, code, linenums]
----
DELETE http://localhost:8080/mmc/api/usergroups/{userGroupName}
----

[%header%autowidth.spread]
|===
|Key |Type |Summary |Child of
|userGroupName |String |Name of the User Group to be removed. Invoke link:/mule-management-console/v/3.4/user-groups[LIST ALL] to obtain it. |--
|===

*Using CURL*

[source, code, linenums]
----
curl --basic -u admin:admin -X DELETE http://localhost:8080/mmc/api/usergroups/Monitors
----
....
[tab,title="<- Response"]
....
*JSON*

[source, code, linenums]
----
200 OK
----
....
[tab,title="⬇️ Common Return codes"]
....
[%autowidth.spread]
|===
|*200* |The operation was unsuccessful
|*500* |Error while deleting User Group
|===
....
[tab,title="MMC Version"]
....
[%autowidth.spread]
|===
|*From* |3.3.0
|===
....
------

== 用户组权限

[source, code, linenums]
----
/api/usergroups/permissions
----

[%autowidth.spread]
|===
| *GET*  |  | *LIST ALL*
3 + |
|===

列出所有可用的权限。

[tabs]
------
[tab,title="-> Request"]
....
*SYNTAX*

[source, code, linenums]
----
GET http://localhost:8080/mmc/api/usergroups/permissions
----

*Using CURL*

[source, code, linenums]
----
curl --basic -u admin:admin http://localhost:8080/mmc/api/usergroups/permissions
----
....
[tab,title="<- Response"]
....
*JSON*

[source, code, linenums]
----
{
  "permissions":
    [
      "SERVER_FILES_DELETE","TRACKING_VIEW","MANAGE_FLOW_AUDIT","DEPLOYMENT_DELETE","FLOW_LIST","FLOW_CONTROL","MANAGE_ALERT_DESTINATIONS",
      "MODIFY_ITEM","MANAGE_PROPERTIES","SERVER_THREADS_VIEW","TRACKING_DELETE","APPLICATION_VIEW","SERVER_REGISTER","APPLICATION_MANAGE",
      "TRACKING_MODIFY","DEPLOYMENT_CREATE","SERVER_VIEW","MANAGE_INDEXES","DEPLOYMENT_MODIFY","MANAGE_ALERT_NOTIFICATIONS","READ_ITEM",
      "POOL_MODIFY","MANAGE_LIFECYCLES","MANAGE_ALERT_DEFINITIONS","SERVER_MODIFY","DELETE_ITEM","DEPLOYMENT_DEPLOY","MANAGE_SERVER_GROUPS",
      "SERVER_DISBAND_CLUSTER","SERVER_FILES_VIEW","VIEW_ACTIVITY","DEPLOYMENT_READ","EXECUTE_ADMIN_SCRIPTS","SERVER_THREADS_KILL",
      "SERVER_RESTART","MANAGE_POLICIES","SERVER_UNREGISTER","ENDPOINT_CONTROL","MANAGE_USERS","VIEW_ALERTS","SERVER_CREATE_CLUSTER",
      "MANAGE_GROUPS","SERVER_FILES_MODIFY"
    ]
}
----

[%header%autowidth.spread]
|===
|Key |Type |Summary |Child of
|permissions |Array |Available permissions for User Groups |--
|===
....
[tab,title="⬇️ Common Return codes"]
....
[%autowidth.spread]
|===
|*200* |The operation was unsuccessful
|*401* |Unauthorized user
|*500* |Error while deleting User Group
|===
....
[tab,title="MMC Version"]
....
[%autowidth.spread]
|===
|*From* |3.3.0
|===
....
------
