mule-management-console/v/3.5/user-groups.adoc
= 用户组

本文档以及组成 link:/mule-management-console/v/3.7/rest-api-reference[Mule管理控制台REST API参考指南“]的其他文档仅为技术参考。本文档不提供诸如说明，用例或方案的上下文信息。要理解本文档，您应该熟悉https://www.mulesoft.com/resources/esb/what-mule-esb[MULE ESB]，用户组和 link:/mule-management-console/v/3.7/using-the-management-console-api[REST API]。

[cols="20a,10a,10a,10a,10a,10a,10a,10a,10a"]
|===
| *Assumptions:*  |主机 |本地主机 |端口 | 8080  |部署的应用程序 | mmc.war { {8}}用户/密码 |管理/管理
|===

有关本文档中使用的格式的详细说明，请参阅 link:/mule-management-console/v/3.7/rest-api-reference[内容组织和公约]。

*/api/usergroups*

*POST*



创建


创建一个新的UserGroup。

[tabs]
------
[tab,title="Request"]
....
===== JSON

[source,json, linenums]
----

{
  "name" : "NewUserGroupName",
  "description" : "Ability to view activity and delete events",
  "permissions" : ["VIEW_ACTIVITY", "TRACKING_DELETE"]
}
----

[%header,cols="4*"]
|===
|Key |Type |Summary |Child of
|name |String |Name of the User Group to be created |—
|description |String |Description of the purpose of the Server Group to be created |—
|permissions |String |Permissions assigned to the User Group. A user that belongs to this User Group will have the same permissions |—
|===

===== Using CURL on Windows

[source,bash, linenums]
----
curl --basic -u admin:admin -d "{ \"name\" : \"TestUserGroup\", \"description\": \"This is a test\", \"permissions\": [\"VIEW_ACTIVITY\",\"TRACKING_DELETE\"] }" --header "Content-Type: application/json" http://localhost:8080/mmc/api/usergroups
----

===== Using CURL on Linux

[source,bash, linenums]
----
curl --basic -u admin:admin -d '{ "name" : "TestUserGroup", "description": "This is a test", "permissions": ["VIEW_ACTIVITY","TRACKING_DELETE"] }' --header 'Content-Type: application/json' http://localhost:8080/mmc/api/usergroups
----
....
[tab,title="Response"]
....
===== JSON

[source,json, linenums]
----
{
  "name":"NewUserGroupName",
  "permissions":["VIEW_ACTIVITY","TRACKING_DELETE"],
  "description":"Ability to view activity and delete events",
  "href":"http://localhost:8080/mmc/api/groups/NewUserGroupName"
}
----

[%header,cols="4*"]
|===
|Key |Type |Summary |Child of
|name |String |Name of the User Group to be created |—
|description |String |Description of the purpose of the Server Group to be created |—
|permissions |String |Permissions assigned to the User Group. A user that belongs to this User Group will have the same permissions |—
|href |String |Full link to the resource |—
|===

....
[tab,title="Common Return Codes"]
....
[cols="10a,90a",width=90%]
|===
|*201* |The request has been fulfilled and resulted in a new UserGroup being created
|*400* |Invalid permissions requested
|*500* |Error while creating new User Group
|===
....
[tab,title="MMC Version"]
....
[cols="2*",width=10%]
|===
|From |3.3.0
|===

....
------

*GET*


列出所有


列出所有可用的用户组。

[tabs]
------
[tab,title="Request"]
....
===== SYNTAX

GET http://localhost:8080/mmc/api/usergroups/

===== Using CURL

[source,bash, linenums]
----
curl --basic -u admin:admin http://localhost:8080/mmc/api/usergroups
----

....
[tab,title="Response"]
....
===== JSON

[source,json, linenums]
----
{
  "total":5,
  "data":[
    {"name":"Administrators","permissions":["VIEW_ACTIVITY","DELETE_ITEM","MANAGE_INDEXES","POOL_MODIFY","EXECUTE_ADMIN_SCRIPTS","SERVER_MODIFY",
      "MANAGE_ALERT_NOTIFICATIONS","MANAGE_ALERT_DEFINITIONS","READ_ITEM","MANAGE_POLICIES","DEPLOYMENT_MODIFY","MANAGE_LIFECYCLES","SERVER_DISBAND_CLUSTER",
      "DEPLOYMENT_DEPLOY","SERVER_THREADS_KILL","SERVER_RESTART","SERVER_FILES_VIEW","DEPLOYMENT_READ","ENDPOINT_CONTROL","MANAGE_SERVER_GROUPS","VIEW_ALERTS",
      "SERVER_CREATE_CLUSTER","MANAGE_USERS","SERVER_UNREGISTER","SERVER_FILES_MODIFY","MANAGE_FLOW_AUDIT","TRACKING_VIEW","SERVER_FILES_DELETE","MANAGE_GROUPS",
      "MANAGE_ALERT_DESTINATIONS","DEPLOYMENT_DELETE","FLOW_CONTROL","FLOW_LIST","MODIFY_ITEM","APPLICATION_VIEW","SERVER_THREADS_VIEW","MANAGE_PROPERTIES",
      "SERVER_REGISTER","TRACKING_DELETE","DEPLOYMENT_CREATE","SERVER_VIEW","TRACKING_MODIFY","APPLICATION_MANAGE"],
      "href":"http://localhost:8080/mmc/api/groups/Administrators"},
    {"name":"Deployers","permissions":["DEPLOYMENT_READ","VIEW_ALERTS","DEPLOYMENT_DEPLOY"],"href":"http://localhost:8080/mmc/api/groups/Deployers"},
    {"name":"Monitors","permissions":["SERVER_THREADS_VIEW","DEPLOYMENT_READ","VIEW_ALERTS","SERVER_VIEW","SERVER_FILES_VIEW"],"description":"A read only view into Mule ESB Enterprise.",
      "href":"http://localhost:8080/mmc/api/groups/Monitors"},{"name":"Server Administrators","permissions":["DELETE_ITEM","POOL_MODIFY","SERVER_MODIFY",
        "MANAGE_ALERT_NOTIFICATIONS","MANAGE_ALERT_DEFINITIONS","READ_ITEM","DEPLOYMENT_MODIFY","SERVER_DISBAND_CLUSTER","DEPLOYMENT_DEPLOY",
        "SERVER_THREADS_KILL","SERVER_RESTART","SERVER_FILES_VIEW","DEPLOYMENT_READ","ENDPOINT_CONTROL","MANAGE_SERVER_GROUPS","VIEW_ALERTS","SERVER_CREATE_CLUSTER",
        "SERVER_UNREGISTER","SERVER_FILES_MODIFY","MANAGE_FLOW_AUDIT","TRACKING_VIEW","SERVER_FILES_DELETE","MANAGE_ALERT_DESTINATIONS","DEPLOYMENT_DELETE",
        "FLOW_CONTROL","FLOW_LIST","MODIFY_ITEM","APPLICATION_VIEW","SERVER_THREADS_VIEW","SERVER_REGISTER","TRACKING_DELETE","DEPLOYMENT_CREATE","SERVER_VIEW",
        "TRACKING_MODIFY","APPLICATION_MANAGE"],
        "href":"http://localhost:8080/mmc/api/groups/Server%20Administrators"}
  ]
}
----

[%header,cols="4*"]
|===
|Key |Type |Summary |Child of
|total |Integer |The total number of User Groups |—
|data |Array |An array of User Group types |—
|name |String |The identifying name of the User Group |data
|permissions |String |Permissions assigned to the User Group |data
|href |String |Full link to the User Group resource to which you can perform an operation |data
|===

....
[tab,title="Common Return Codes"]
....

[cols="2*",width=10%]
|===
|*200* |The operation was successful
|*401* |Unauthorized user
|===

....
[tab,title="MMC Version"]
....
[cols="2*",width=10%]
|===
|From |3.3.0
|===

....
------

*/api/usergroups/\{userGroupName}*

*GET*


LIST


列出特定用户组的详细信息。

[tabs]
------
[tab,title="Request"]
....
===== SYNTAX

GET http://localhost:8080/mmc/api/usergroups/{userGroupName}

[%header,cols="4*"]
|===
|Key |Type |Summary |Child of
|userGroupName |String |Name of the server group to be listed. Invoke LIST ALL to obtain it. |—
|===

===== Using CURL

[source,bash, linenums]
----
curl --basic -u admin:admin http://localhost:8080/mmc/api/usergroups/Administrators
----

....
[tab,title="Response"]
....
===== JSON

[source,json, linenums]
----
{
  "name":"Administrators",
  "permissions":["VIEW_ACTIVITY","DELETE_ITEM","MANAGE_INDEXES","POOL_MODIFY","EXECUTE_ADMIN_SCRIPTS","SERVER_MODIFY",
    "MANAGE_ALERT_NOTIFICATIONS","MANAGE_ALERT_DEFINITIONS","READ_ITEM","MANAGE_POLICIES","DEPLOYMENT_MODIFY",
    "MANAGE_LIFECYCLES","SERVER_DISBAND_CLUSTER","DEPLOYMENT_DEPLOY","SERVER_THREADS_KILL","SERVER_RESTART",
    "SERVER_FILES_VIEW","DEPLOYMENT_READ","ENDPOINT_CONTROL","MANAGE_SERVER_GROUPS","VIEW_ALERTS",
    "SERVER_CREATE_CLUSTER","MANAGE_USERS","SERVER_UNREGISTER","SERVER_FILES_MODIFY","MANAGE_FLOW_AUDIT",
    "TRACKING_VIEW","SERVER_FILES_DELETE","MANAGE_GROUPS","MANAGE_ALERT_DESTINATIONS","DEPLOYMENT_DELETE",
    "FLOW_CONTROL","FLOW_LIST","MODIFY_ITEM","APPLICATION_VIEW","SERVER_THREADS_VIEW","MANAGE_PROPERTIES",
    "SERVER_REGISTER","TRACKING_DELETE","DEPLOYMENT_CREATE","SERVER_VIEW","TRACKING_MODIFY","APPLICATION_MANAGE"],
  "href":"http://localhost:8080/mmc/api/grops/Administrators"
}
----

[%header,cols="4*"]
|===
|Key |Type |Summary |Child of
|name |String |The identifying name of the User Group |—
|permissions |String |Permissions assigned to the User Group |—
|href |String |Full link to the User Group resource to which you can perform an operation |—
|===

....
[tab,title="Common Return Codes"]
....
[cols="2*",width=10%]
|===
|*200* |The operation was successful
|*401* |User has no permissions to access the group
|*404* |Provided User Group name does not exist
|*500* |Error while attempting to list User Group details
|===

....
[tab,title="MMC Version"]
....
[cols="2*",width=10%]
|===
|From |3.3.0
|===

....
------

*PUT*


UPDATE

更新特定的用户组。

[tabs]
------
[tab,title="Request"]
....
===== SYNTAX

[source,json, linenums]
----
{
  "name" : "NewUserGroupName",
  "description" : "Ability to view activity and delete events",
  "permissions" : ["VIEW_ACTIVITY", "TRACKING_DELETE"]
}
----

[%header,cols="4*"]
|===
|Key |Type |Summary |Child of
|name |String |Name of the User Group to be created |—
|description |String |Description of the purpose of the Server Group to be created |—
|permissions |String |Permissions assigned to the User Group. A user that belongs to this User Group will have the same permissions |—
|===

===== Using CURL on Windows

[source,bash, linenums]
----
curl --basic -u admin:admin -X PUT -d "{ \"name\" : \"NewUserGroupName\", \"description\": \"Ability to view activity and delete events\", \"permissions\": [\"VIEW_ACTIVITY\",\"TRACKING_DELETE\"] }" --header "Content-Type: application/json" http://localhost:8080/mmc/api/usergroups/Deployers
----

===== Using CURL on Linux

[source,bash, linenums]
----
curl --basic -u admin:admin -X PUT -d { "name" : "NewUserGroupName", "description": "Ability to view activity and delete events", "permissions": ["VIEW_ACTIVITY","TRACKING_DELETE"] }" --header 'Content-Type: application/json' http://localhost:8080/mmc/api/usergroups/Deployers
----

....
[tab,title="Response"]
....
===== JSON

[source.json]
----
{
  "name" : "NewUserGroupName",
  "description" : "Ability to view activity and delete events",
  "permissions" : ["VIEW_ACTIVITY", "TRACKING_DELETE"]
  "href" : "http://localhost:8080/mmc/api/usergroups/NewUserGroupName"
}
----

[%header,cols="4*"]
|===
|Key |Type |Summary |Child of
|name |String |Name of the User Group to be created |—
|description |String |Description of the purpose of the Server Group to be created |—
|permissions |String |Permissions assigned to the User Group. A user that belongs to this User Group will have the same permissions |—
|href |String |Full link to the User Group resource to which you can perform an operation |—
|===

....
[tab,title="Common Return Codes"]
....

[cols="2*",width=10%]
|===
|*200* |The operation was successful
|*401* |Unauthorized user
|*500* |Error while updating User Group
|===

....
[tab,title="MMC Version"]
....

[cols="2*",width=10%]
|===
|From |3.3.0
|===

....
------

*DELETE*


去掉

删除特定的用户组。

[tabs]
------
[tab,title="Request"]
....
===== SYNTAX

DELETE http://localhost:8080/mmc/api/usergroups/{userGroupName}

[%header,cols="4*"]
|===
|Key |Type |Summary |Child of
|userGroupName |String |Name of the User Group to be removed. Invoke LIST ALL to obtain it. |—
|===

===== Using CURL

[source, code, linenums]
----
curl --basic -u admin:admin -X DELETE http://localhost:8080/mmc/api/usergroups/Monitors
----

....
[tab,title="Response"]
....
===== JSON

200 OK
....
[tab,title="Common Return Codes"]
....
[cols="2*",width=10%]
|===
|*200* |The operation was successful
|*500* |Error while deleting User Group
|===

....
[tab,title="MMC Version"]
....
[cols="2*",width=10%]
|===
|From |3.3.0
|===

....
------

== 用户组权限

*/api/usergroups/permissions*

*GET*


列出所有


列出所有可用的权限。

[tabs]
------
[tab,title="Request"]
....
===== SYNTAX

GET http://localhost:8080/mmc/api/usergroups/permissions

===== Using CURL

[source, code, linenums]
----
curl --basic -u admin:admin http://localhost:8080/mmc/api/usergroups/permissions
----

===== JSON

[source,json, linenums]
----
{
  "permissions":
    [
      "SERVER_FILES_DELETE","TRACKING_VIEW","MANAGE_FLOW_AUDIT","DEPLOYMENT_DELETE","FLOW_LIST","FLOW_CONTROL","MANAGE_ALERT_DESTINATIONS",
      "MODIFY_ITEM","MANAGE_PROPERTIES","SERVER_THREADS_VIEW","TRACKING_DELETE","APPLICATION_VIEW","SERVER_REGISTER","APPLICATION_MANAGE",
      "TRACKING_MODIFY","DEPLOYMENT_CREATE","SERVER_VIEW","MANAGE_INDEXES","DEPLOYMENT_MODIFY","MANAGE_ALERT_NOTIFICATIONS","READ_ITEM",
      "POOL_MODIFY","MANAGE_LIFECYCLES","MANAGE_ALERT_DEFINITIONS","SERVER_MODIFY","DELETE_ITEM","DEPLOYMENT_DEPLOY","MANAGE_SERVER_GROUPS",
      "SERVER_DISBAND_CLUSTER","SERVER_FILES_VIEW","VIEW_ACTIVITY","DEPLOYMENT_READ","EXECUTE_ADMIN_SCRIPTS","SERVER_THREADS_KILL",
      "SERVER_RESTART","MANAGE_POLICIES","SERVER_UNREGISTER","ENDPOINT_CONTROL","MANAGE_USERS","VIEW_ALERTS","SERVER_CREATE_CLUSTER",
      "MANAGE_GROUPS","SERVER_FILES_MODIFY"
    ]
}
----

[%header,cols="4*"]
|===
|Key |Type |Summary |Child of
|permissions |Array |Available permissions for User Groups |—
|===

....
[tab,title="Common Return Codes"]
....
[cols="2*",width=10%]
|===
|*200* |The operation was successful
|*401* |Unauthorized user
|*500* |Error while listing all available permissions
|===

....
[tab,title="MMC Version"]
....
[cols="2*",width=10%]
|===
|From |3.3.0
|===

....
------
